dropshot/tests/fail/bad_trait_only5.stderr
error: API trait `MyApi` does not have associated type `OtherContext`
       (this type specifies the shared context for endpoints)
 --> tests/fail/bad_trait_only5.rs:8:7
  |
8 | trait MyApi {
  |       ^^^^^
